force-app/main/default/objects/MarketingTableExp__c/MarketingTableExp__c.object-meta.xml
<CustomObject>
    <label>Marketing Table Exp</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Table Exp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>