force-app/main/default/objects/MarketingTableExp__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>It has improved</fullName>
            </value>
            <value>
                <fullName>It has stayed the same</fullName>
            </value>
            <value>
                <fullName>It has worsened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>