force-app/main/default/objects/MarketingTableExp__c/fields/Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Year_Formula__c</fullName>
    <formula>DATE(Year__c,1,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Formula</label>
    <type>Date</type>
</CustomField>